--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ body, .app {
   margin-top: 10px;
 }
 .book-authors {
-  color: #999;
+  color: rgb(215, 255, 141);
 }
 
 .book-top {
@@ -142,23 +142,56 @@ body, .app {
 }
 
 .book-shelf-changer {
-  position: absolute;
-  right: 0;
-  bottom: -10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #60ac5d;
+  position: relative;
+  /* left: 130px; */
+  /* bottom: 50px; */
+  /* width: 70px; */
+  height: 25px;
+  /* border-radius: 50%; */
+  background: #468144;
+  color:white;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px;
+  background-position: left;
+  background-size: 15px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
+.react-select__control{
+  background: #222;
+  color:white;
+}
+.react-select__value-container {
+  background: #222;
+  color:white;
+}
+.react-select__indicators {
+  background: #222;
+  color:white;
+}
+.react-select__menu {
+  background: #222;
+  color:white;
+}
+.react-select__menu-list {
+  background: #222;
+  color:white;
+}
+.react-select__option {
+  background: #222;
+  color:white;
+}
+
+.react-select__option:hover {
+  background: #222;
+  color:white;
+}
+
 .book-shelf-changer select {
+  background: white;
   width: 100%;
   height: 100%;
-  opacity: 0;
+  opacity: 1;
   cursor: pointer;
 }
 
