--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: rgb(41, 128, 185);
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -126,6 +126,7 @@ body, .app {
 .book-title,
 .book-authors {
   font-size: 0.8em;
+  width: 100%;
 }
 .book-title {
   margin-top: 10px;
@@ -145,38 +146,73 @@ body, .app {
   align-items: flex-end;
 }
 
-.book-shelf-changer {
+/* CUSTOM DROP DOWN */
+.small {
+  font-size: 0.8em;
+}
+
+.square {
+  width: .3em;
+  height: .7em;
+  margin: .2em;
+  display: inline-block;
+}
+
+/* Custom dropdown */
+.custom-dropdown {
   position: relative;
-  /* left: 130px; */
-  /* bottom: 50px; */
-  /* width: 70px; */
-  height: 25px;
-  /* border-radius: 50%; */
-  background: #468144;
-  color:white;
-  background-image: url('./icons/arrow-drop-down.svg');
-  background-repeat: no-repeat;
-  background-position: left;
-  background-size: 15px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0; /* demo only */
 }
 
-.state-select {
-  background: green;
-  color:white;
+.custom-dropdown select {
+  background-color:rgb(41, 128, 185);
+  color: #fff;
+  font-size: inherit;
+  padding: .5em;
+  padding-right: 2.5em;
+  border: 0;
+  margin: 0;
+  text-indent: 0.01px;
+  text-overflow: '';
+  -moz-appearance: none;
+  -webkit-appearance:none;
+  appearance: none;
 }
 
-.state-select:hover {
-  background: teal;
-  color:gold;
+.custom-dropdown::before,
+.custom-dropdown::after {
+  content: "";
+  position: absolute;
+  pointer-events: none;
 }
 
-.book-shelf-changer select {
-  background: white;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  cursor: pointer;
+.custom-dropdown::after { /*  Custom dropdown arrow */
+  content: "\25BC";
+  height: 1em;
+  font-size: .625em;
+  line-height: 1;
+  right: 1.2em;
+  top: 50%;
+  margin-top: -.5em;
+}
+
+.custom-dropdown::before { /*  Custom dropdown arrow cover */
+  width: 2em;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 0 3px 3px 0;
+  background-color: rgba(0,0,0,.2);
+}
+
+.custom-dropdown::after {
+  color: rgba(0,0,0,.6);
+}
+
+.custom-dropdown select[disabled] {
+  color: rgba(0,0,0,.25);
 }
 
 /* book cover */
